# Ballast

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ballast/: __init__.py  analyze.py  cli.py  events.py  simulate.py
benchmark/: harness.py  plot.py
benchmark/results/: throughput.json
docs/: github_repo_metadata.md
tests/: test_ballast.py
