[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ballast"
version = "0.1.0"
description = "Finds the skew that makes your Spark jobs list. Reads event logs; no Spark install needed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prasannakumar Kasindala" }]
keywords = ["spark", "data-skew", "stragglers", "event-logs", "performance",
            "data-engineering", "shuffle", "observability"]

# Zero third-party runtime dependencies. Spark event logs are JSON lines;
# stdlib does JSON lines.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "matplotlib>=3.7"]

[project.scripts]
ballast = "ballast.cli:main"

[tool.setuptools]
packages = ["ballast"]

[project.urls]
Homepage = "https://github.com/kasindala-prasannakumar/ballast"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
